--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "private": true,
-  "dependencies": {
+  "devDependencies": {
     "lerna": "^4.0.0"
   },
   "scripts": {
+    "build": "lerna run build",
 	  "bootstrap": "lerna bootstrap",
 	  "postinstall": "lerna bootstrap"
   },
